<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Multimedia Language Courses</string>
    <string name="rv_main_courses_open">Open</string>
    <string name="rv_main_courses_start">Start</string>
    <string name="rv_main_courses_progress_zero">Not started</string>
    <string name="generic_course">Course</string>
    <string name="rv_main_courses_version_awaitdownload">Available, version %1$d (%2$s to download)</string>
    <string name="rv_main_courses_version">Version %1$d</string>
    <string name="rv_main_courses_version_outdated">Outdated (version %1$d), version %2$d available (%3$s to download)</string>
    <string name="rv_main_courses_progress_complete">Complete</string>
    <string name="rv_main_courses_progress_partial">Progress: %1$.0f%%</string>
    <string name="rv_main_courses_continue">Continue</string>
    <string name="tab_vocabulary">Vocabulary</string>
    <string name="tab_conversations">Convers.</string>
    <string name="tab_quiz">Quiz</string>
    <string name="definition_word_translation">%1$s — %2$s</string>
    <string name="answer">Answer</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="tutorial_subtitle">How to use the course</string>
    <string name="tutorial_uparrow_desc">Arrow pointing at the tab bar</string>
    <string name="tutorial_vocabarrow_desc">Arrow pointing at a vocabulary image</string>
    <string name="tutorial_convarrow_desc">Arrow pointing at a conversation bubble</string>
    <string name="tutorial_rightarrow_desc">Arrow pointing at the Listen button</string>
    <string name="tutorial_header">Pick an activity!</string>
    <string name="tutorial_vocab">1. Learn new words on the Vocabulary tab.</string>
    <string name="tutorial_definition">Tap the picture to make it larger, hear the word and see the definition.</string>
    <string name="tutorial_conversation">2. See the vocabulary in action on the Conversation tab.</string>
    <string name="tutorial_conversation_hear">Tap the bubble to hear the pronunciation.</string>
    <string name="tutorial_quiz">3. Test your knowledge in the Quiz.</string>
    <string name="tutorial_quiz_pass">You need at least %1$d%% correct answers to pass.</string>
    <string name="tutorial_listen_button">Tap this button to listen to the vocabulary or the conversations.</string>
    <string name="tutorial_button">Start learning</string>
    <string name="quiz_start">Start</string>
    <string name="quiz_try_again">Try again</string>
    <string name="quiz_check">Check</string>
    <string name="quiz_next">Next</string>
    <string name="quiz_notstarted_intro">Test your knowledge in the Quiz!</string>
    <string name="quiz_question_number">Question %1$d of %2$d</string>
    <string name="quiz_correct_count">Correct: %1$d</string>
    <string name="quiz_answer_correct_wrap">%1$s ✔️</string>
    <string name="quiz_answer_incorrect_wrap">%1$s ❌</string>
    <string name="quiz_question_number_notinprogress" translatable="false" />
    <string name="quiz_question_correct_notinprogress" translatable="false" />
    <string name="quiz_finished_intro">The results are in!</string>
    <string name="quiz_notstarted_intro1">How well did you remember what you learnt? You can test your knowledge in the Quiz.</string>
    <string name="quiz_notstarted_intro2">The quiz for this chapter contains</string>
    <plurals name="quiz_notstarted_qcount">
        <item quantity="one">%1$d question</item>
        <item quantity="other">%1$d questions</item>
    </plurals>
    <string name="quiz_notstarted_requirement_text">You need to get %1$d%% of the questions correct to complete this chapter.</string>
    <string name="quiz_finished_intro1">Thanks for taking the quiz!</string>
    <string name="quiz_finished_intro2">Correct answers:</string>
    <string name="quiz_finished_success">Congratulations! You completed another chapter!</string>
    <string name="quiz_finished_failure">You failed to achieve %1$d%% correct responses… You can try again. Good luck!</string>
    <string name="quiz_finished_start_next">See what’s next</string>
    <string name="menu_refresh">Refresh</string>
    <string name="refresh_failed">Failed to refresh list!</string>
    <string name="go_online_to_refresh">Go online to make sure you’ve got the latest version!</string>
    <string name="refresh_failed_offline">You’re offline. Go online and try to refresh again.</string>
    <string name="offline_header_text">You’re offline.</string>
    <string name="offline_description_text">Please connect to the Internet to load the course list.</string>
    <string name="offline_btn_text">Try again</string>
    <string name="rv_main_courses_download">Download</string>
    <string name="rv_main_courses_update">Update</string>
    <string name="download_complete">Download of %s complete!</string>
    <string name="download_failed">Downloading %s failed! Check your connection, refresh the course list and try again.</string>
    <string name="downloading_please_wait">Downloading, please wait…</string>
    <string name="download_offline_error">You’re offline. Connect to the Internet and try again.</string>
    <string name="download_failed_dialog">Download failed</string>
    <string name="downloading_dialog">Downloading…</string>
    <string name="cc_course_progress">COURSE PROGRESS</string>
    <string name="cc_percent_format">%1$d%%</string>
    <string name="menu_quizattempts_text">Previous quiz attempts</string>
    <string name="menu_statistics_text">Statistics</string>
    <string name="stats_completion_overall">Completion overall</string>
    <string name="stats_average_quiz_score_overall">Average quiz score overall</string>
    <string name="stats_percent_format">%1$d%%</string>
    <string name="stats_number_format">%1$d</string>
    <string name="stats_attempts">Attempts</string>
    <string name="stats_best_attempt">Best attempt</string>
    <string name="stats_average_score">Average score</string>
    <string name="quizattempts_date_placeholder" tools:ignore="TypographyDashes">0000-00-00 00:00:00</string>
    <string name="quizattempts_correct">%1$d%% correct answers</string>
    <string name="quizattempts_pass">PASS</string>
    <string name="quizattempts_fail">FAIL</string>
    <string name="statistics_title">Statistics</string>
    <string name="quizattempts_title">Quiz Attempts</string>
    <string name="stats_percent_complete">%1$d%% complete</string>
    <string name="course_cover_content_description">Course cover image</string>
    <string name="placeholder_content_description">Placeholder.</string>
    <string name="quiz_finished_qcount">%1$d/%2$d (%3$d%%)</string>
    <string name="fab_description">Listen</string>
    <string name="licenses_title">Media Licenses</string>
    <string name="no_licenses">There are no media credits available for this chapter.</string>
</resources>
