<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quiz_img_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chapter.quiz.QuizFragment">


    <ImageView
        android:id="@+id/quiz_image_top"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/quiz_answer_rg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <RadioGroup
        android:id="@+id/quiz_answer_rg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_image_top">

        <RadioButton
            android:id="@+id/quiz_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer" />

        <RadioButton
            android:id="@+id/quiz_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/answer" />

        <RadioButton
            android:id="@+id/quiz_answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/answer" />

        <RadioButton
            android:id="@+id/quiz_answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/answer" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>